# control-lj

./: CMakeLists.txt  ReadMe.md
common/configs/: config_gflags.cpp  config_gflags.h  vehicle_config_helper.cpp  vehicle_config_helper.h
common/data/: vehicle_param.json
common/filters/: digital_filter.cpp  digital_filter.h  digital_filter_coefficients.cpp  digital_filter_coefficients.h  math.cpp  math.h  mean_filter.cpp  mean_filter.h
common/math/: bspline_1d.cpp  bspline_1d.h  euler_angles_zxy.h  interpolation_1d.cpp  interpolation_1d.h  interpolation_1d_old.cpp  interpolation_2d.cpp  interpolation_2d.h  linear_quadratic_regulator.cpp  linear_quadratic_regulator.h  vec2d.cpp  vec2d.h
common/vehicle_state/: vehicle_state_provider.cpp  vehicle_state_provider.h
common/vehicle_state/msg/: vehicle_state.h
common_msg/: OneDrive - 快捷方式.lnk
common_msg/basic_msgs/: drive_state_msg.h  geometry_msg.h  header_msg.h  pnc_point_msg.h  vehicle_id_msg.h  vehicle_signal_msg.h
common_msg/chassis_msgs/: chassis_msg.h
common_msg/config_msgs/: vehicle_config_msg.h
common_msg/control_msgs/: control_cmd_msg.h  pad_msg.h
common_msg/localization_msgs/: localization_msg.h  localization_status_msg.h  pose_msg.h
common_msg/map_msgs/: map_id_msg.h
common_msg/planning_msgs/: decision_msg.h  navigation_msg.h  planning_internal_msg.h  planning_msg.h  sl_boundary_msg.h
common_msg/routing_msgs/: geometry_msg.h  poi_msg.h  routing_msg.h
control_component/config/: calibration_table.h  gain_scheduler_conf.h  leadlag_conf.h  mrac_conf.h  pid_conf.h
control_component/config/conf/: calibration_table.json  pb2json.py
control_component/controller_task_base/common/: dependency_injector.h  leadlag_controller.cpp  leadlag_controller.h  pid_controller.cpp  pid_controller.h  trajectory_analyzer.cpp  trajectory_analyzer.h
controller/lat_based_lqr_controller/: connect_lat_controller_test.cpp  connect_lat_controller_test.h  lat_controller_test.cpp  lat_controller_test.h  main.cpp
controller/lat_based_lqr_controller/config/: controller_conf.json  lat_base_lqr_controller_conf.h
controller/lat_based_lqr_controller/csv/: steer_log_simple_optimmal_2025-11-18_094303.csv
controller/lat_based_lqr_controller/lateral_controller_test/: 1_localization.json  txt2json.py
controller/lon_based_pid_controller/: connect_lon_controller_test.cpp  connect_lon_controller_test.h  lon_controller_test.cpp  lon_controller_test.h  main.cpp
controller/lon_based_pid_controller/conf/: controller_conf.json  lon_based_pid_controller_conf.h
controller/lon_based_pid_controller/csv/: speed_log_simple_optimmal_2025-11-18_135600.csv
controller/lon_based_pid_controller/longitudinal_controller_test/: 1_chassis.json  1_planning.json
controller/lon_based_pid_controller/util/: check_pit.cpp  check_pit.h
